# iot-monitoring-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old  start.ps1
components/battery_monitor/: CMakeLists.txt  battery_monitor.c
components/battery_monitor/include/: battery_monitor.h
components/cloud_client/: CMakeLists.txt
components/config_manager/: CMakeLists.txt  config_manager.c
components/discord_api/: CMakeLists.txt  discord_api.cpp  discord_tasks.c
components/firebase_api/: CMakeLists.txt  firebase_api.c  firebase_tasks.c
components/gsm_modem/: CMakeLists.txt  gsm_modem.cpp
components/gsm_modem/include/: gsm_modem.h  main_config.h
components/gsm_module/: CMakeLists.txt  gsm_module.c
components/json_helper/: CMakeLists.txt  json_helper.c
components/power_management/: CMakeLists.txt  power_management.c
components/pubsub_api/: CMakeLists.txt  pubsub_api.c
components/reporter/: CMakeLists.txt  reporter.c
components/sensors/: CMakeLists.txt  sensors.c
components/storage/: CMakeLists.txt  storage.c
components/system_state/: CMakeLists.txt  state.c
components/system_states/: CMakeLists.txt  system_states.c
components/time_manager/: CMakeLists.txt  time_manager.c
docs/: Description of the program execution steps.docx  ESP-NETIF.txt  Error logs.txt  Sprint 4 Review meeting.docx  Technical_issue_Lilygo_ESP32.md  data_flow.md  modules_description_fi.md  structure.txt  uart_async_rxtxtasks_main.txt  uart_events_example_main.txt
main/: CMakeLists.txt  main.c
(+23 files in other folders)
